# rust-rest-client-demo

./: Cargo.toml  README.md
src/: concurrent_calls.rs  lib.rs  main.rs  rest_async_client_with_auth_and_retry.rs  rest_client_basic.rs  rest_client_impl.rs  rest_client_trait.rs
