[package]
name = "rest-client-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
tokio = { version = "1.21.2", features = ["full"] } # for our async runtime
futures = "0.3.25"

